--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ API_BIND_ADDR=127.0.0.1
 #Docker:
 #API_BIND_ADDR=0.0.0.0
 FLIPSIDE_API_KEY=
+
+# DATABASE
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=etherfi
+HOST=localhost
+DATABASE_DSN="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${HOST}:5432/${POSTGRES_DB}"
