--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 {
     "perpAddr":     "0x8f8BccE4c180B699F81499005281fA89440D1e95",
-    "poolTknAddr": ["0xc21950e41121C2c52DC8074713514ddBAD678258"],
+    "poolShareTknAddr": "0xc21950e41121C2c52DC8074713514ddBAD678258",
+    "poolTknAddr" : "0xaf88d065e77c8cc2239327c5edb3a432268e5831",
+    "poolTknDecimals": 6,
     "rpcUrl": ["https://arbitrum.llamarpc.com", "https://arb1.arbitrum.io/rpc"]
 }
