--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,6 @@
     "chainId": 421614,
     "poolId": 2,
     "genesisBlock": 30021418,
-    "rpcUrl": ["https://crimson-delicate-friday.arbitrum-sepolia.quiknode.pro/42be8b2bfd0eb2536ad42e02bf4825e9cb1cb799/", "https://arbitrum-sepolia.blockpi.network/v1/rpc/public", "https://public.stackup.sh/api/v1/node/arbitrum-sepolia"],
-    "rpcUrlFilterer": ["https://sepolia-rollup.arbitrum.io/rpc", "https://bold-stylish-sunset.arbitrum-sepolia.quiknode.pro/c7458b060f5d275a78742ec02614db8deaecd453/"]
+    "rpcUrl": ["https://arbitrum-sepolia.blockpi.network/v1/rpc/public", "https://public.stackup.sh/api/v1/node/arbitrum-sepolia"],
+    "rpcUrlFilterer": ["https://sepolia-rollup.arbitrum.io/rpc"]
 }
